# roshi

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN.md  README.md  eslint.config.js  index.html  lefthook.yml  package-lock.json  package.json  release.sh  tsconfig.app.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/hooks/: post-edit-check.sh
.cursor/rules/: validate-changes.mdc
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: appstore-release.yml  appstore.yml  bump-version.yml  ci.yml  release.yml
docs/: improvements.md  missing-features.md  refactoring.md  syntax-highlighting.md
fastlane/: Appfile  Fastfile  README.md
public/: manifest.json
scripts/: bump-version.sh  generate-appstore-screenshots.sh  report-coverage.mjs  run-with-node.sh  validate-release-notes.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  EntitlementsAppStore.plist  EntitlementsDevID.plist  Info.plist  tauri.appstore.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: fixtures.ts  mock-select.tsx  mock-server.ts  setup.ts  strip-dom-props.ts
src/adapters/: anthropic.test.ts  anthropic.ts  gemini.test.ts  gemini.ts  index.test.ts  index.ts  openai-chat.ts  openai-responses.test.ts  openai-responses.ts  openai.test.ts  openai.ts  shared.test.ts  shared.ts  types.ts
src/components/: AboutDialog.test.ts  AboutDialog.test.tsx  AboutDialog.tsx  CommandPalette.tsx  ErrorBoundary.test.ts  (+3 more)
(+301 files in other folders)
