[package]
name = "llm-tester"
version = "0.1.0"
description = "A Postman-like GUI client for testing LLM service APIs"
authors = [""]
edition = "2021"

[lib]
name = "llm_tester_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
