[package]
name = "roshi"
version = "1.0.0"
description = "MIT-licensed local-first workbench for testing LLM APIs"
authors = [""]
edition = "2021"

[lib]
name = "roshi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.5.7"
tauri-plugin-opener = "2"
